--- a/index.html
+++ b/index.html
@@ -897,21 +897,21 @@
                 </script>
             </div>
             <section class="section2Content">
-                <h2 class="sectionContentTitleSmall">1: State-of-the-art and Technical Trends of Intelligent Flying Cars</h2>
+                <h2 class="sectionContentTitleSmall">State-of-the-art and Technical Trends of Intelligent Flying Cars</h2>
                 <h3 class="sectionContentSubTitleSmall">
-                    <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a><ion-icon name="mail-outline"></ion-icon>, 
+                    <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a><ion-icon name="mail-outline"></ion-icon>,
                     <a style="color: #999;">Songsong Rong</a>,
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
                     <a href="https://www.cae.cn/cae/html/main/colys/00679747.html" target="_blank">Deyi Li</a>,
                     <a href="https://scholar.google.com.hk/citations?user=HXnkIkwAAAAJ" target="_blank">Huaping Liu</a>, 
                     <a href="https://scholar.google.com.hk/citations?user=gVuaz7QAAAAJ" target="_blank">Yuanhao Huang</a>, 
                     <b>Kangyao Huang</b>,
-                    <a href="https://scholar.google.com.hk/citations?user=pKCG3T8AAAAJ" target="_blank">Jianxi Luo</a>,
+                    <a href="https://scholar.google.com.hk/citations?user=pKCG3T8AAAAJ" target="_blank">Jianxi Luo</a>
                 </h3>
                 <h3 class="sectionContentSubTitleSmall">
                     <em> 中国科学（技术科学）, SCIENTIA SINICA Techinologica, 2024</em>, <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">TH-CPL-A</a>, <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">2024年4月-第54卷第4期封面文章-Cover Paper</a>
                 </h3>
-                <h2 class="sectionContentTitleSmall">2: Wind-Resistant Flight Control for Amphibious Flying Car</h2>
+                <h2 class="sectionContentTitleSmall">Wind-Resistant Flight Control for Amphibious Flying Car</h2>
                 <h3 class="sectionContentSubTitleSmall">
                     <b>Kangyao Huang</b>,
                     <a style="color: #999;">Baoshang Zhou</a>,
@@ -1511,7 +1511,7 @@
                 <!-- 西北工业大学 -->
                 <tr style="vertical-align: middle;">
                     <td style="width:40px; padding: 8px 0; vertical-align: middle;">
-                        <img src="profile/西工大校标大图 蓝白版.jpg" width="32" height="32" style="display:block; vertical-align: middle;">
+                        <img src="profile/nwpu.png" width="32" height="32" style="display:block; vertical-align: middle;">
                     </td>
                     <td style="padding: 8px 8px; white-space: nowrap; vertical-align: middle;">
                         <span style="font-weight: bold; font-style: italic; font-size: 11px;">2012~2016,&nbsp;</span>
@@ -1537,38 +1537,41 @@
         <h2 class="sectionTitle">Awards</h2>
         <hr class="section2">
 
-        <div class="section2" style="padding:0px;vertical-align:middle;line-height: 5px;">
-            <group>
-                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2021,&ensp;</h3>
-                <h3 class="sectionContentSubTitle">
-                    Bronze Medal at the International Exhibition of Inventions of Geneva
-                </h3>
-            </group>
-            <group>
-                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2021,&ensp;</h3>
-                <h3 class="sectionContentSubTitle">
-                    Best Student Paper Award at Chinese Intelligent Automation Conference (CIAC)
-                </h3>
-            </group>
-            <!-- <group>
-                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2024,&ensp;</h3>
-                <h3 class="sectionContentSubTitle">
-                    Yang Huiyan Scholarship at Tsinghua University（惠妍英才奖学金-清华大学）
-                </h3>
-            </group>
-            <group>
-                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2025,&ensp;</h3>
-                <h3 class="sectionContentSubTitle">
-                    HuangPu Scholarship at Tsinghua University（黄埔英才奖学金-清华大学）
-                </h3>
-            </group> -->
-            <group>
-                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2025,&ensp;</h3>
-                <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">First Prize</a> at CICC Science and Technology Progress Award-Technology Invention（中国指控学会科技进步奖技术发明类一等奖）无人系统具身交互感知关键技术及应用
-                </h3>
-            </group>
+        <div class="section2" style="padding:0px; font-family: 'Montserrat', sans-serif; color: #828282;">
+            <!-- 2021 日内瓦 -->
+            <div style="display:flex; align-items:baseline; margin-bottom:10px;">
+                <span style="font-weight:bold; font-style:italic; white-space:nowrap;font-size: 11px;">2021,&nbsp;</span>
+                <span style="font-size:11px;">Bronze Medal at the International Exhibition of Inventions of Geneva</span>
+            </div>
+
+            <!-- 2021 CIAC -->
+            <div style="display:flex; align-items:baseline; margin-bottom:10px;">
+                <span style="font-weight:bold; font-style:italic; white-space:nowrap;font-size: 11px;">2021,&nbsp;</span>
+                <span style="font-size:11px;">Best Student Paper Award at Chinese Intelligent Automation Conference (CIAC)</span>
+            </div>
+            
+            <!-- 2024 惠妍英才奖学金 -->
+            <div style="display:flex; align-items:baseline; margin-bottom:10px;">
+                <span style="font-weight:bold; font-style:italic; white-space:nowrap;font-size: 11px;">2024,&nbsp;</span>
+                <span style="font-size:11px;">Yang Huiyan Scholarship at Tsinghua University（惠妍英才奖学金-清华大学）</span>
+            </div>
+
+            <!-- 2025 黄埔英才奖学金 -->
+            <div style="display:flex; align-items:baseline; margin-bottom:10px;">
+                <span style="font-weight:bold; font-style:italic; white-space:nowrap;font-size: 11px;">2025,&nbsp;</span>
+                <span style="font-size:11px;">HuangPu Scholarship at Tsinghua University（黄埔英才奖学金-清华大学）</span>
+            </div>
+
+            <!-- 2025 一等奖 -->
+            <div style="display:flex; align-items:baseline; margin-bottom:10px;">
+                <span style="font-weight:bold; font-style:italic; white-space:nowrap;font-size: 11px;">2025,&nbsp;</span>
+                <span style="font-size:11px;">
+                    <strong>First Prize</strong> at CICC Science and Technology Progress Award-Technology Invention
+                    （中国指控学会科技进步奖技术发明类一等奖）无人系统具身交互感知关键技术及应用
+                </span>
+            </div>
         </div>
+
     </section>
 
     <br>
@@ -1577,25 +1580,27 @@
         <h2 class="sectionTitle">Experiences</h2>
         <hr class="section2">
 
-        <div class="section2" style="padding:0px;vertical-align:middle;line-height: 5px;">
-            <group>
-                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2015~2019,&emsp;</h3>
-                <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">Co-Founder</a> @<a style="font-weight: bold;color: rgb(112, 112, 112);">Bingo Intelligence Co. Ltd.</a>, Xi'an, ShaanXi, China.
-                </h3>
-            </group>
-            <group>
-                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2020~2022,&emsp;</h3>
-                <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">Research assistant</a> @Institute for New Technology Concept Vehicles,<a style="font-weight: bold;color: rgb(113, 112, 114);"> THU</a>, Beijing, China
-                </h3>
-            </group>
-            <group>
-                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2023~now,&emsp;</h3>
-                <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">Founder @超微智导技术</a></a>, China
-                </h3>
-            </group>
+        <div class="section2" style="padding:0px; font-family:'Montserrat',sans-serif; color:#828282;">
+            <div style="display:flex; align-items:baseline; margin-bottom:10px;">
+                <span style="font-weight:bold; font-style:italic; white-space:nowrap; font-size:11px;">2015~2019,&nbsp;</span>
+                <span style="font-size:11px;">
+                    <strong>Co-Founder</strong> @<strong style="color:#707070;">Bingo Intelligence Co. Ltd.</strong>, Xi'an, ShaanXi, China.
+                </span>
+            </div>
+
+            <div style="display:flex; align-items:baseline; margin-bottom:10px;">
+                <span style="font-weight:bold; font-style:italic; white-space:nowrap; font-size:11px;">2020~2022,&nbsp;</span>
+                <span style="font-size:11px;">
+                    <strong>Research assistant</strong> @Institute for New Technology Concept Vehicles, <strong style="color:#717072;">THU</strong>, Beijing, China
+                </span>
+            </div>
+
+            <div style="display:flex; align-items:baseline;">
+                <span style="font-weight:bold; font-style:italic; white-space:nowrap; font-size:11px;">2023~now,&nbsp;</span>
+                <span style="font-size:11px;">
+                    <strong>Founder</strong> @超微智导技术, China
+                </span>
+            </div>
         </div>
 
     </section>
